--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,6 @@ body::before {
     left: 0;
 }
 #bparticles-js {
-    display:none;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -1233,18 +1232,18 @@ a.button4:hover {
     background-image:url('../css/light_bg.jpg');
     content: "";
     position: fixed;
-    background-size: cover;
+    background-size:cover;
     left: 0;
     right: 0;
     top: 0;
     height: 100vh;
   }
-.light-mode #particles-js {
+/* .light-mode #particles-js {
     display: none;
-}
-.light-mode #bparticles-js{
+} */
+/* .light-mode #bparticles-js{
     display:inline;
-  }
+  } */
 .light-mode #header .typeh2{
     font-size: 30px;
     font-family: 'Roboto', sans-serif;
