--- a/css/style.css
+++ b/css/style.css
@@ -1,124 +1,3 @@
-/**
-* PAGE PRELOADER
-* Replace with your own icon or logo and use on your site
-*/
-
-
-/**
-* VARIABLES
-* Tweak them for prefered result 
-*/
-
-
-/* #site {
-    opacity: 0;
-    transition: all 2s ease;
-  }
-  #preloader {
-    height: 40px;
-    width: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -20px;
-    margin-left: -20px;
-  }
-  #preloader:before {
-    content: "";
-    display: block;
-    position: absolute;
-    left: -1px;
-    top: -1px;
-    height: 100%;
-    width: 100%;
-    -webkit-animation: rotation 1s linear infinite;
-            animation: rotation 1s linear infinite;
-    border: 1px solid #9746ee;
-    border-top: 1px solid transparent;
-    border-radius: 100%;
-  }
-  #icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: 25px;
-    width: 10.6px;
-    margin-top: -12.5px;
-    margin-left: -5.3px;
-    -webkit-animation: wink 1s ease-in-out infinite alternate;
-            animation: wink 1s ease-in-out infinite alternate;
-  }
-  @media only screen and (min-width: 768px) {
-    #preloader {
-      height: 60px;
-      width: 60px;
-      margin-top: -30px;
-      margin-left: -30px;
-    }
-    #preloader:before {
-      left: -2px;
-      top: -2px;
-      border-top-width: 2px;
-      border-left-width: 2px;
-      border-bottom-width: 2px;
-      border-right-width: 2px;
-      color: black;
-    }
-    #icon {
-      height: 37.5px;
-      width: 15.9px;
-      margin-top: -18.75px;
-      margin-left: -7.95px;
-    }
-  }
-  @media only screen and (min-width: 1200px) {
-    #preloader {
-      height: 80px;
-      width: 80px;
-      margin-top: -40px;
-      margin-left: -40px;
-    }
-    #icon {
-      height: 50px;
-      width: 21.2px;
-      margin-top: -25px;
-      margin-left: -10.6px;
-    }
-  }
-  @-webkit-keyframes rotation {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(359deg);
-    }
-  }
-  @keyframes rotation {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(359deg);
-    }
-  }
-  @-webkit-keyframes wink {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-  @keyframes wink {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-   */
-
 .grow {
     transition: all 0.2s ease-in-out;
 }
@@ -176,7 +55,7 @@ body {
 body::before {
     content: "";
     position: fixed;
-    background-color: black;
+    background-color: rgb(7, 7, 7);
     background-image: url("./backg1.jpg");
     background-size: cover;
     left: 0;
@@ -1456,9 +1335,9 @@ a.button4:hover {
 }
 
 .light-mode::before {
-    background: #ffffff;
+    background: #d3d3d3;
     color: black;
-    background-image: url('../css/light_bg.jpg');
+    background-image: url('./light_bg2.jpg');
     content: "";
     position: fixed;
     background-size: cover;
