--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
     background-color: #000000;
     overflow: hidden;
     overflow-y: hidden;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -17,6 +17,7 @@
     display: inline-block;
     width: 30px;
     height: 30px;
+    overflow-y: hidden;
     position: relative;
     border: 4px solid #be5df7;
     animation: loader 2s infinite ease;
@@ -150,6 +151,7 @@ body {
     background: transparent;
     scroll-behavior: smooth;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 body::before {
